fixed issue with parameters
