# facade/wrapper.go
@@ -1,525 +1,0 @@
-// Package facade provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
-package facade
-
-import (
-	"fmt"
-	"net/http"
-
-	"github.com/deepmap/oapi-codegen/pkg/runtime"
-	"github.com/go-chi/chi/v5"
-)
-
-// ServerInterface represents all server handlers.
-type ServerInterface interface {
-	// Upload file
-	// (POST /assets)
-	UploadFile(w http.ResponseWriter, r *http.Request)
-	// Create display
-	// (POST /d)
-	CreateDisplay(w http.ResponseWriter, r *http.Request, params CreateDisplayParams)
-	// Delete display
-	// (DELETE /d/{displayID})
-	DeleteDisplay(w http.ResponseWriter, r *http.Request, displayID uint64)
-	// Get display
-	// (GET /d/{displayID})
-	GetDisplay(w http.ResponseWriter, r *http.Request, displayID uint64)
-	// Update display
-	// (PATCH /d/{displayID})
-	UpdateDisplay(w http.ResponseWriter, r *http.Request, displayID uint64)
-	// Create Item
-	// (POST /i)
-	CreateItem(w http.ResponseWriter, r *http.Request, params CreateItemParams)
-	// Delete item
-	// (DELETE /i/{itemID})
-	DeleteItem(w http.ResponseWriter, r *http.Request, itemID uint64)
-	// Get item
-	// (GET /i/{itemID})
-	GetItem(w http.ResponseWriter, r *http.Request, itemID uint64)
-	// Update item
-	// (PATCH /i/{itemID})
-	UpdateItem(w http.ResponseWriter, r *http.Request, itemID uint64)
-	// Get user
-	// (GET /{username})
-	GetUser(w http.ResponseWriter, r *http.Request, username string)
-	// Update user
-	// (PATCH /{username})
-	UpdateUser(w http.ResponseWriter, r *http.Request, username string)
-	// Create user
-	// (POST /{username})
-	CreateUser(w http.ResponseWriter, r *http.Request, username string)
-}
-
-// ServerInterfaceWrapper converts contexts to parameters.
-type ServerInterfaceWrapper struct {
-	Handler            ServerInterface
-	HandlerMiddlewares []MiddlewareFunc
-	ErrorHandlerFunc   func(w http.ResponseWriter, r *http.Request, err error)
-}
-
-type MiddlewareFunc func(http.HandlerFunc) http.HandlerFunc
-
-// UploadFile operation middleware
-func (siw *ServerInterfaceWrapper) UploadFile(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.UploadFile(w, r)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// CreateDisplay operation middleware
-func (siw *ServerInterfaceWrapper) CreateDisplay(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// Parameter object where we will unmarshal all parameters from the context
-	var params CreateDisplayParams
-
-	// ------------- Optional query parameter "display" -------------
-	if paramValue := r.URL.Query().Get("display"); paramValue != "" {
-
-	}
-
-	err = runtime.BindQueryParameter("form", true, false, "display", r.URL.Query(), &params.Display)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "display", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.CreateDisplay(w, r, params)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// DeleteDisplay operation middleware
-func (siw *ServerInterfaceWrapper) DeleteDisplay(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "displayID" -------------
-	var displayID uint64
-
-	err = runtime.BindStyledParameter("simple", false, "displayID", chi.URLParam(r, "displayID"), &displayID)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "displayID", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.DeleteDisplay(w, r, displayID)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// GetDisplay operation middleware
-func (siw *ServerInterfaceWrapper) GetDisplay(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "displayID" -------------
-	var displayID uint64
-
-	err = runtime.BindStyledParameter("simple", false, "displayID", chi.URLParam(r, "displayID"), &displayID)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "displayID", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetDisplay(w, r, displayID)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// UpdateDisplay operation middleware
-func (siw *ServerInterfaceWrapper) UpdateDisplay(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "displayID" -------------
-	var displayID uint64
-
-	err = runtime.BindStyledParameter("simple", false, "displayID", chi.URLParam(r, "displayID"), &displayID)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "displayID", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.UpdateDisplay(w, r, displayID)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// CreateItem operation middleware
-func (siw *ServerInterfaceWrapper) CreateItem(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// Parameter object where we will unmarshal all parameters from the context
-	var params CreateItemParams
-
-	// ------------- Optional query parameter "item" -------------
-	if paramValue := r.URL.Query().Get("item"); paramValue != "" {
-
-	}
-
-	err = runtime.BindQueryParameter("form", true, false, "item", r.URL.Query(), &params.Item)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "item", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.CreateItem(w, r, params)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// DeleteItem operation middleware
-func (siw *ServerInterfaceWrapper) DeleteItem(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "itemID" -------------
-	var itemID uint64
-
-	err = runtime.BindStyledParameter("simple", false, "itemID", chi.URLParam(r, "itemID"), &itemID)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "itemID", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.DeleteItem(w, r, itemID)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// GetItem operation middleware
-func (siw *ServerInterfaceWrapper) GetItem(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "itemID" -------------
-	var itemID uint64
-
-	err = runtime.BindStyledParameter("simple", false, "itemID", chi.URLParam(r, "itemID"), &itemID)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "itemID", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetItem(w, r, itemID)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// UpdateItem operation middleware
-func (siw *ServerInterfaceWrapper) UpdateItem(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "itemID" -------------
-	var itemID uint64
-
-	err = runtime.BindStyledParameter("simple", false, "itemID", chi.URLParam(r, "itemID"), &itemID)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "itemID", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.UpdateItem(w, r, itemID)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// GetUser operation middleware
-func (siw *ServerInterfaceWrapper) GetUser(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "username" -------------
-	var username string
-
-	err = runtime.BindStyledParameter("simple", false, "username", chi.URLParam(r, "username"), &username)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "username", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetUser(w, r, username)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// UpdateUser operation middleware
-func (siw *ServerInterfaceWrapper) UpdateUser(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "username" -------------
-	var username string
-
-	err = runtime.BindStyledParameter("simple", false, "username", chi.URLParam(r, "username"), &username)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "username", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.UpdateUser(w, r, username)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-// CreateUser operation middleware
-func (siw *ServerInterfaceWrapper) CreateUser(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	var err error
-
-	// ------------- Path parameter "username" -------------
-	var username string
-
-	err = runtime.BindStyledParameter("simple", false, "username", chi.URLParam(r, "username"), &username)
-	if err != nil {
-		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "username", Err: err})
-		return
-	}
-
-	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.CreateUser(w, r, username)
-	}
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler(w, r.WithContext(ctx))
-}
-
-type UnescapedCookieParamError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *UnescapedCookieParamError) Error() string {
-	return fmt.Sprintf("error unescaping cookie parameter '%s'", e.ParamName)
-}
-
-func (e *UnescapedCookieParamError) Unwrap() error {
-	return e.Err
-}
-
-type UnmarshalingParamError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *UnmarshalingParamError) Error() string {
-	return fmt.Sprintf("Error unmarshaling parameter %s as JSON: %s", e.ParamName, e.Err.Error())
-}
-
-func (e *UnmarshalingParamError) Unwrap() error {
-	return e.Err
-}
-
-type RequiredParamError struct {
-	ParamName string
-}
-
-func (e *RequiredParamError) Error() string {
-	return fmt.Sprintf("Query argument %s is required, but not found", e.ParamName)
-}
-
-type RequiredHeaderError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *RequiredHeaderError) Error() string {
-	return fmt.Sprintf("Header parameter %s is required, but not found", e.ParamName)
-}
-
-func (e *RequiredHeaderError) Unwrap() error {
-	return e.Err
-}
-
-type InvalidParamFormatError struct {
-	ParamName string
-	Err       error
-}
-
-func (e *InvalidParamFormatError) Error() string {
-	return fmt.Sprintf("Invalid format for parameter %s: %s", e.ParamName, e.Err.Error())
-}
-
-func (e *InvalidParamFormatError) Unwrap() error {
-	return e.Err
-}
-
-type TooManyValuesForParamError struct {
-	ParamName string
-	Count     int
-}
-
-func (e *TooManyValuesForParamError) Error() string {
-	return fmt.Sprintf("Expected one value for %s, got %d", e.ParamName, e.Count)
-}
-
-// Handler creates http.Handler with routing matching OpenAPI spec.
-func Handler(si ServerInterface) http.Handler {
-	return HandlerWithOptions(si, ChiServerOptions{})
-}
-
-type ChiServerOptions struct {
-	BaseURL          string
-	BaseRouter       chi.Router
-	Middlewares      []MiddlewareFunc
-	ErrorHandlerFunc func(w http.ResponseWriter, r *http.Request, err error)
-}
-
-// HandlerFromMux creates http.Handler with routing matching OpenAPI spec based on the provided mux.
-func HandlerFromMux(si ServerInterface, r chi.Router) http.Handler {
-	return HandlerWithOptions(si, ChiServerOptions{
-		BaseRouter: r,
-	})
-}
-
-func HandlerFromMuxWithBaseURL(si ServerInterface, r chi.Router, baseURL string) http.Handler {
-	return HandlerWithOptions(si, ChiServerOptions{
-		BaseURL:    baseURL,
-		BaseRouter: r,
-	})
-}
-
-// HandlerWithOptions creates http.Handler with additional options
-func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handler {
-	r := options.BaseRouter
-
-	if r == nil {
-		r = chi.NewRouter()
-	}
-	if options.ErrorHandlerFunc == nil {
-		options.ErrorHandlerFunc = func(w http.ResponseWriter, r *http.Request, err error) {
-			http.Error(w, err.Error(), http.StatusBadRequest)
-		}
-	}
-	wrapper := ServerInterfaceWrapper{
-		Handler:            si,
-		HandlerMiddlewares: options.Middlewares,
-		ErrorHandlerFunc:   options.ErrorHandlerFunc,
-	}
-
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/assets", wrapper.UploadFile)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/d", wrapper.CreateDisplay)
-	})
-	r.Group(func(r chi.Router) {
-		r.Delete(options.BaseURL+"/d/{displayID}", wrapper.DeleteDisplay)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/d/{displayID}", wrapper.GetDisplay)
-	})
-	r.Group(func(r chi.Router) {
-		r.Patch(options.BaseURL+"/d/{displayID}", wrapper.UpdateDisplay)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/i", wrapper.CreateItem)
-	})
-	r.Group(func(r chi.Router) {
-		r.Delete(options.BaseURL+"/i/{itemID}", wrapper.DeleteItem)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/i/{itemID}", wrapper.GetItem)
-	})
-	r.Group(func(r chi.Router) {
-		r.Patch(options.BaseURL+"/i/{itemID}", wrapper.UpdateItem)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/{username}", wrapper.GetUser)
-	})
-	r.Group(func(r chi.Router) {
-		r.Patch(options.BaseURL+"/{username}", wrapper.UpdateUser)
-	})
-	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/{username}", wrapper.CreateUser)
-	})
-
-	return r
-}
